<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="no_internet_connection_n_please_try_again_later">Oops! No Internet Connection.</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="twelve_month">12 Months</string>
    <string name="no_data_found">No Data Found !</string>
    <string name="value">Values</string>
    <string name="transactions">Transactions</string>
    <string name="nooftransactions">No. of Transactions</string>
    <string name="performance">Performance</string>
    <string name="all_locations">All Locations</string>
    <string name="sales">Sales</string>



</resources>