<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/all_graph_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_small"
    android:visibility="visible"
    app:cardBackgroundColor="@color/card_background"
    app:cardCornerRadius="5dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="@dimen/_3sdp"
            android:layout_height="match_parent"
            android:background="@drawable/view_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_location_all"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:ellipsize="marquee"
                            android:fadingEdge="horizontal"
                            android:fontFamily="@font/montserrat_regular"
                            android:gravity="start"
                            android:marqueeRepeatLimit="marquee_forever"
                            android:maxLines="2"
                            android:scrollHorizontally="true"
                            android:singleLine="false"
                            android:text="@string/all_locations"
                            android:textColor="@color/common_text_color"
                            android:textSize="@dimen/_14ssp" />

                        <TextView
                            android:id="@+id/tv_amount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:fontFamily="@font/montserrat_semibold"
                            android:textColor="@color/common_text_color"
                            android:textSize="@dimen/_18ssp"
                            android:visibility="visible" />

                        <TextView
                            android:id="@+id/tv_transaction"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:fontFamily="@font/montserrat_regular"
                            android:text=""
                            android:textColor="@color/common_text_color"
                            android:textSize="@dimen/_12ssp"
                            android:visibility="visible" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/LL_second_chart"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:orientation="vertical"
                        android:visibility="visible">

                        <net.cachapa.expandablelayout.ExpandableLayout
                            android:id="@+id/iv_graph"
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:orientation="horizontal"
                            android:visibility="visible"
                            app:el_duration="500"
                            app:el_expanded="false"
                            app:el_parallax="0.5">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:scaleType="fitXY"
                                android:visibility="gone"
                                app:srcCompat="@drawable/ic_dummy_line_graph" />

                            <com.github.mikephil.charting.charts.LineChart
                                android:id="@+id/linechart2"
                                android:layout_width="match_parent"
                                android:layout_height="70dp"
                                android:layout_gravity="center"
                                android:visibility="visible">

                            </com.github.mikephil.charting.charts.LineChart>

                        </net.cachapa.expandablelayout.ExpandableLayout>
                    </LinearLayout>

                </LinearLayout>

                <net.cachapa.expandablelayout.ExpandableLayout
                    android:id="@+id/LLlinechart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:el_duration="500"
                    app:el_expanded="true"
                    app:el_parallax="0.5">

                    <LinearLayout
                        android:id="@+id/layout_no_performancedata"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone"
                        android:weightSum="1">

                        <TextView
                            android:id="@+id/tv_empty_state_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_regular"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/view_the_sales_to_volume_business_analysis_for_your_outlets"
                            android:textColor="@color/title_label"
                            android:textSize="@dimen/text12" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/iv_empty_state_image"
                            android:layout_width="match_parent"
                            android:layout_height="250dp"
                            android:paddingTop="10dp"
                            android:scaleType="fitXY"
                            app:srcCompat="@drawable/no_performancegraph1" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_performancedata"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:orientation="horizontal"
                            android:visibility="gone"
                            android:weightSum="1">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="0.5"
                                android:orientation="vertical"
                                android:weightSum="1">

                                <View
                                    android:id="@+id/viewValue"
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_weight="0.1"
                                    android:background="@color/blue_green" />

                                <TextView
                                    android:id="@+id/valueTxtLineGraph"
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_gravity="center"
                                    android:layout_weight="0.9"
                                    android:fontFamily="@font/montserrat_semibold"
                                    android:gravity="center_vertical"
                                    android:paddingLeft="@dimen/margin_small"
                                    android:text="@string/value"
                                    android:textColor="@color/white_black"
                                    android:textSize="@dimen/txt_v1large" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="0.5"
                                android:orientation="vertical"
                                android:weightSum="1">

                                <View
                                    android:id="@+id/viewTransaction"
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_weight="0.1"
                                    android:background="@color/blue_green"
                                    android:visibility="invisible" />

                                <TextView
                                    android:id="@+id/transactionTxtLineGraph"
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_gravity="center"
                                    android:layout_weight="0.9"
                                    android:fontFamily="@font/montserrat_regular"
                                    android:gravity="center_vertical"
                                    android:paddingLeft="@dimen/margin_small"
                                    android:text="@string/transactions"
                                    android:textColor="@color/subtitle_label"
                                    android:textSize="@dimen/txt_v1large" />
                            </LinearLayout>


                        </LinearLayout>

                        <com.github.mikephil.charting.charts.LineChart
                            android:id="@+id/linechart"
                            android:layout_width="match_parent"
                            android:layout_height="250dp"
                            android:layout_gravity="center"
                            android:visibility="visible">

                        </com.github.mikephil.charting.charts.LineChart>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:id="@+id/iv_sale"
                                android:layout_width="13dp"
                                android:layout_height="13dp"
                                android:layout_marginRight="5dp"
                                app:srcCompat="@drawable/round_icon1" />

                            <TextView
                                android:id="@+id/tv_sale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="15dp"
                                android:fontFamily="@font/montserrat_regular"
                                android:text="@string/sales"
                                android:textColor="@color/regent_grey"
                                android:textSize="@dimen/_10ssp" />

                            <androidx.appcompat.widget.AppCompatImageView
                                android:id="@+id/iv_txn"
                                android:layout_width="13dp"
                                android:layout_height="13dp"
                                android:layout_marginRight="5dp"
                                app:srcCompat="@drawable/round_icon2" />

                            <TextView
                                android:id="@+id/tv_txn"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/montserrat_regular"
                                android:text="@string/nooftransactions"
                                android:textColor="@color/regent_grey"
                                android:textSize="@dimen/_10ssp" />


                        </LinearLayout>
                    </LinearLayout>

                </net.cachapa.expandablelayout.ExpandableLayout>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/RLArrowExpander"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?selectableItemBackground">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/arrowExpander"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_horizontal"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ic_arrow_down_20dp"
                    app:tint="@color/common_text_color" />
            </RelativeLayout>
        </LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.cardview.widget.CardView>